--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently npm run server \"npm run client\""
   },
   "author": "Garrett Stewart",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "dotenv": "^16.4.5"
   }
 }
